--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/node": "^16.18.117",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2",
     "ravendb": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
